# DaoAI-World-SDK-Desktop-Demo

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  README.zh.md  sample.json
cpp_demos/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
cpp_demos/DW_SDK_Cpp_Example/: DW_SDK_Cpp_Example.sln
cpp_demos/DW_SDK_Qt_Example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cs_demos/: README.md
cs_demos/OCR_demo/: OCR_demo.csproj  OCR_demo.sln  Program.cs
cs_demos/WinFormsApp1/: Form1.Designer.cs  Form1.cs  WinFormsApp1.csproj  WinFormsApp1.sln
cs_demos/auto_segment/: auto_segment.sln
cs_demos/classification/: classification.sln
cs_demos/halcon_sdk_demo/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  halcon_sdk_demo.csproj  halcon_sdk_demo.sln  superviseDecetsegmentation_Ins.cs
cs_demos/inference_service/: inference_service.sln
cs_demos/instance_segmentation/: instance_segmentation.sln
cs_demos/keypoint_detection/: Program.cs  keypoint_detection.csproj  keypoint_detection.sln
cs_demos/mixed_model/: mixed_model.sln
cs_demos/object_detection/: object_detection.sln
cs_demos/positioning/: positioning.sln
cs_demos/presence_checking/: presence_checking.sln
cs_demos/rotated_object_detection/: rotated_object_detection.sln
cs_demos/supervised_defect_segmentation/: supervised_defect_segmentation.sln
cs_demos/work_with_opencv_demo/: work_with_opencv_demo.sln
python_demos/: auto_segment_demo.py  classification_demo.py  defect_detection_demo.py  helmet_person_mixed_model_demo.py  instance_segmentation_demo.py  keypoint_detection_demo.py  mixed_model_demo.py  object_detection_demo.py  ocr_demo.py  positioning_demo.py  presence_checking_demo.py  python_gui_example.py  requirements.txt  rotated_object_detection_demo.py  supervised_defect_segmentation_demo.py  test_brush_delete_after.py  traffic_bar_video.py  unsupervised_defect_segmentation_demo.py  video_vehicle_flow_demo.py  websocket_vihicle_flow_demo.py  work_with_opencv_demo.py
(+82 files in other folders)
